<resources>
    <string name="app_name">myQCM</string>
    <string name="name">Name</string>
    <string name="jouer">Jouer</string>
    <string name="nom">Nom</string>
    <string name="_3_5">3 * 5 = ?</string>
    <string name="_15_4">15 + 4 = ?</string>
    <string name="_2_2">2 + 2 = ?</string>
    <string name="valider">Valider</string>
    <string name="_19">19</string>
    <string name="_4">4</string>
    <string name="_18">18</string>
    <string name="_15">15</string>
    <string name="_10">10</string>
</resources>