<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Game">

    <TextView
        android:id="@+id/firstQ"
        android:layout_width="92dp"
        android:layout_height="33dp"
        android:layout_marginTop="76dp"
        android:text="@string/_3_5"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <CheckBox
        android:id="@+id/thirdFalse"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/_15"
        app:layout_constraintEnd_toStartOf="@+id/firstFalse"
        app:layout_constraintHorizontal_bias="0.485"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/firstQuestion3" />

    <CheckBox
        android:id="@+id/firstFalse"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="137dp"
        android:text="@string/_18"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/firstTrue"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/firstQuestion3"
        android:layout_width="116dp"
        android:layout_height="37dp"
        android:layout_marginTop="376dp"
        android:text="@string/_15_4"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.494"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <CheckBox
        android:id="@+id/secondTrue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="107dp"
        android:layout_marginBottom="36dp"
        android:text="@string/_4"
        app:layout_constraintBottom_toTopOf="@+id/firstQuestion3"
        app:layout_constraintEnd_toStartOf="@+id/firstFalse"
        app:layout_constraintHorizontal_bias="0.48"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/firstTrue" />

    <TextView
        android:id="@+id/SecondQ"
        android:layout_width="92dp"
        android:layout_height="33dp"
        android:layout_marginTop="224dp"
        android:text="@string/_2_2"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <CheckBox
        android:id="@+id/thirdTrue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/_19"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toEndOf="@+id/firstTrue"
        app:layout_constraintTop_toBottomOf="@+id/firstQuestion3" />

    <CheckBox
        android:id="@+id/firstTrue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="137dp"
        android:text="@string/_15"
        app:layout_constraintEnd_toStartOf="@+id/firstFalse"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <CheckBox
        android:id="@+id/secondFalse"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="107dp"
        android:layout_marginBottom="36dp"
        android:text="@string/_10"
        app:layout_constraintBottom_toTopOf="@+id/firstQuestion3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toEndOf="@+id/firstTrue"
        app:layout_constraintTop_toBottomOf="@+id/firstFalse" />

    <Button
        android:id="@+id/validate"
        android:layout_width="123dp"
        android:layout_height="54dp"
        android:layout_marginTop="51dp"
        android:text="@string/valider"
        android:textAllCaps="true"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/thirdFalse" />

</androidx.constraintlayout.widget.ConstraintLayout>